<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:orientation="vertical"
        android:padding="1dp" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="0dp"
            android:src="@drawable/logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="#ffffff"
            android:orientation="vertical"
            android:padding="0dp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                style="@style/infoSistema"
                android:background="#f5f5f5"
                android:text="PetSoftware - Versão Mobille" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"                
                android:background="#ffffff"
                android:orientation="vertical"
                android:padding="5dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/usuario" />

                <EditText
                    android:id="@+id/usuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:inputType="text" >

                    <requestFocus />
                </EditText>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/senha" />

                <EditText
                    android:id="@+id/senha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:inputType="textPassword" />

                <Button
                    style="@style/login"
                    android:onClick="Login_Click"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"                    
                    android:background="#428bca"                    
                    android:text="@string/login" />

                <TextView                    
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp"
                    android:background="#f5f5f5"
                    style="@style/infoLogin"
                    android:gravity="center"
                    android:text="@string/infoLogin" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>